--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -87,7 +87,7 @@
 
 .chatMessageUserMessage {
     padding: 20px;
-    background: #EDF5FD;
+    background: #eee0db;
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     font-family: "Segoe UI";
