--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -5,7 +5,7 @@
 }
 
 .header {
-    background-color: #f2f2f2;
+    background-color: #000000;
 }
 
 .headerContainer {
@@ -29,12 +29,12 @@
     line-height: 28px;
     display: flex;
     align-items: flex-end;
-    color: #242424;
+    color: #ffffff;
 }
 
 .headerIcon {
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
     margin-left: 36px;
 }
 
@@ -47,7 +47,7 @@
     gap: 4px;
     width: 86px;
     height: 32px;
-    background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #656464 33.63%, #9a9a9a 70.31%, #ceb4aa 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #ffffff 33.63%, #ede9e9 70.31%, #eee0db 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
     border-radius: 4px;
     flex: none;
     order: 1;
@@ -58,7 +58,7 @@
 }
 
 .shareButton {
-    color: #FFFFFF;
+    color: #000000;
 }
 
 .shareButtonText {
@@ -69,7 +69,7 @@
     line-height: 20px;
     display: flex;
     align-items: center;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 .urlTextBox {
