--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -12,10 +12,12 @@
     display: flex;
     justify-content: left;
     align-items: center;
+    height: 48px;
 }
 
 .headerTitleContainer {
     display: flex;
+    justify-content: right;
     align-items: center;
     margin-left: 14px;
     text-decoration: none;
@@ -43,7 +45,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 5px 12px;
+    padding: 0px 0px;
     gap: 4px;
     width: 86px;
     height: 32px;
@@ -52,9 +54,45 @@
     flex: none;
     order: 1;
     flex-grow: 0;
-    position: absolute;
-    right: 20px;
+    position: relative;
+    left: 640px;
     cursor: pointer;
+}
+
+.settingsButtonContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 0px;
+    gap: 4px;
+    width: 86px;
+    height: 32px;
+    background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #000000 33.63%, #000000 70.31%, #000000 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    border-radius: 4px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    position: relative;
+    left: 640px;
+    cursor: pointer;
+}
+
+.settingsIcon {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+    padding: 8px;
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    right: 80px;
+    color: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 20px;
+    z-index: 1;
 }
 
 .shareButton {
