--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -15,6 +15,25 @@
     gap: 20px;
 }
 
+.popupRoot {
+    background: rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+}
+
+.popupContent {
+    background: white;
+    left: 50%;
+    padding: 2em 2em 2em 2em;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .chatContainer {
     flex: 1;
     display: flex;
