--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -78,23 +78,6 @@
     cursor: pointer;
 }
 
-.settingsIcon {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    align-items: center;
-    padding: 8px;
-    position: fixed;
-    width: 40px;
-    height: 40px;
-    right: 80px;
-    color: #FFFFFF;
-    border: 1px solid #D1D1D1;
-    border-radius: 20px;
-    z-index: 1;
-}
-
 .shareButton {
     color: #000000;
 }
@@ -152,4 +135,8 @@
     display: flex;
     align-items: center;
     color: #242424;
+}
+
+.states {
+    display: flex;
 }
